--- a/plataformainvestimento/compose.yaml
+++ b/plataformainvestimento/compose.yaml
@@ -1,9 +1,50 @@
 services:
   postgres:
     image: 'postgres:latest'
-    environment:
-      - 'POSTGRES_DB=mydatabase'
-      - 'POSTGRES_PASSWORD=secret'
-      - 'POSTGRES_USER=myuser'
+    container_name: plataforma_investimento
+    restart: always
+    env_file: .env
     ports:
-      - '5432'
+      - '5456'
+    environment:
+      - POSTGRES_DB: "${DB}"
+      - POSTGRES_PASSWORD: "${PASSWORD_DB}"
+      - POSTGRES_USER: "${USER_DB}"
+    volumes:
+      - pgdata:/var/lib/postgresql/data
+    networks:
+      - plataforma_investimento_network
+
+
+  pgadmin:
+    image: dpage/pgadmin4:latest
+    container_name: plataforma_investimento
+    ports:
+      - "80:80"
+    env_file:
+      - .env
+    environment:
+      - PGADMIN_DEFAULT_EMAIL: "${EMAIL_PGADMIN}"
+      - PGADMIN_DEFAULT_PASSWORD: "${PASSWORD_PGADMIN}"
+
+
+  plataforma_investimento:
+    build: .
+    container_name: plataforma_investimento
+    restart: on-failure
+    env_file: .env
+    ports:
+      - "8085:8085"
+    depends_on:
+      - postgres
+    networks:
+      - plataforma_investimento_network
+
+
+volumes:
+  pgdata:
+
+networks:
+  plataforma_investimento:
+    driver: bridge
+
